<resources>
    <string name="app_name">SampleBasicWidget</string>
    <string name="email_title">E-Mail</string>
    <string name="password_title">Password</string>
    <string name="ok_title">OK</string>
    <string name="cancel_title">Cancel</string>
    <string name="test_text">test text view test text view test text view test text view test text view test text view test text view test text view test text view</string>
    <string name="marquee_title">MARQUEE</string>
    <string name="change_title">CHANGE</string>
    <string name="change_text_message">change text message</string>
    <string name="html_title">HTML</string>
    <string name="html_text"><![CDATA[<font color="red">Hi</font>, <h1>Android</h1>]]></string>
    <string name="toast_title">TOAST</string>
    <string name="check_title">CHECK</string>
    <string name="radio_b1_title">b1</string>
    <string name="radio_b2_title">b2</string>
    <string name="radio_b3_title">b3</string>
    <string name="set_b2_title">SET B2</string>
</resources>
