<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tacademy.samplebasicwidget.TextActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_text"
        android:id="@+id/text_testxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:textColor="@color/colorText"
        android:ellipsize="marquee" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marquee_title"
        android:id="@+id/btn_marquee"
        android:layout_below="@+id/text_testxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_title"
        android:id="@+id/btn_change"
        android:layout_alignBottom="@+id/btn_marquee"
        android:layout_toRightOf="@+id/btn_marquee"
        android:layout_toEndOf="@+id/btn_marquee" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/html_title"
        android:id="@+id/btn_html"
        android:layout_alignTop="@+id/btn_change"
        android:layout_toRightOf="@+id/btn_change"
        android:layout_toEndOf="@+id/btn_change" />
</RelativeLayout>
